--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="largura_logo">385dp</dimen>
     <dimen name="altura_logo">214dp</dimen>
+    <dimen name="largura_Campo">190dp</dimen>
 </resources>
