--- a/app/src/main/res/layout/activity_imagem.xml
+++ b/app/src/main/res/layout/activity_imagem.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fundo"
     tools:context="victor.machado.com.br.registro.ImagemActivity">
 
     <ImageView
-        android:layout_width="368dp"
-        android:layout_height="495dp"
         android:id="@+id/imgDocumento"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_width="@dimen/imagem_Documento"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="372dp" />
 
 </android.support.constraint.ConstraintLayout>
