--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="largura_Campo">190dp</dimen>
     <dimen name="largura_Botao">100dp</dimen>
     <dimen name="altura_Botao">70dp</dimen>
+    <dimen name="imagem_Documento">200dp</dimen>
 </resources>
