--- a/app/src/main/res/layout/activity_confirma.xml
+++ b/app/src/main/res/layout/activity_confirma.xml
@@ -7,9 +7,9 @@
     android:background="@drawable/fundo"
     tools:context="victor.machado.com.br.registro.ConfirmaActivity">
 
-    <!--<include android:id="@+id/toolbar"
+<include android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
--->
+
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
