--- a/app/src/main/res/layout/activity_imagem.xml
+++ b/app/src/main/res/layout/activity_imagem.xml
@@ -9,10 +9,31 @@
 
     <ImageView
         android:id="@+id/imgDocumento"
-        android:layout_width="@dimen/imagem_Documento"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="329dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="372dp" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginTop="8dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/botaoAssinar"
+        android:text="Assinar Documento"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="35dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp" />
 
 </android.support.constraint.ConstraintLayout>
