--- a/app/src/main/res/layout/activity_confirma.xml
+++ b/app/src/main/res/layout/activity_confirma.xml
@@ -76,12 +76,12 @@
         android:id="@+id/confirmaEnd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
         android:layout_marginTop="29dp"
         android:textColor="@color/colorAccent"
-        android:textSize="16dp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textSize="16dp" />
 
     <TextView
         android:id="@+id/confirmaNome"
