--- a/app/src/main/res/layout/activity_listar_docs.xml
+++ b/app/src/main/res/layout/activity_listar_docs.xml
@@ -8,12 +8,27 @@
     tools:context="victor.machado.com.br.registro.ListarFormsActivity">
 
     <include android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar" />
 
     <ListView
         android:id="@+id/lista_Formularios"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="376dp"
+        android:layout_height="436dp"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        tools:layout_editor_absoluteY="67dp" />
+    
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/ic_action_add"
+        android:elevation="100dp"
+        app:fabSize="normal"
+        app:backgroundTint="@color/colorPrimaryDark"
+        android:id="@+id/botaoAdd"/>
 </android.support.constraint.ConstraintLayout>
