--- a/app/src/main/res/menu/menu_confirma.xml
+++ b/app/src/main/res/menu/menu_confirma.xml
@@ -9,9 +9,9 @@
         android:title="@string/action_sair"
         android:orderInCategory="200" app:showAsAction="never"/>
 
-    <item android:id="@+id/item_pesquisa" android:title="Pesquisa"
+    <item android:id="@+id/item_lista" android:title="Lista"
         android:orderInCategory="300" app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_library_books"
         />
 
     <item android:id="@+id/item_sincroniza" android:title="Sincronizar"
