--- a/app/src/main/res/layout/activity_listar_docs.xml
+++ b/app/src/main/res/layout/activity_listar_docs.xml
@@ -12,10 +12,18 @@
 
     <ListView
         android:id="@+id/lista_Formularios"
-        android:layout_width="376dp"
-        android:layout_height="436dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="67dp" />
+        android:layout_width="382dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.125" />
     
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
