Inserindo sistema de LOGIN e CADASTRO

--- a/app/src/main/res/layout/activity_confirma.xml
+++ b/app/src/main/res/layout/activity_confirma.xml
@@ -80,6 +80,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
         android:layout_marginTop="29dp"
+        android:paddingLeft="8dp"
         android:textColor="@color/colorAccent"
         android:textSize="16dp" />
 
@@ -89,6 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
         android:textColor="@color/colorAccent"
+        android:paddingLeft="8dp"
         android:textSize="16dp"
         android:layout_below="@+id/confirmaEnd"
         android:layout_alignParentLeft="true"
@@ -100,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:textColor="@color/colorAccent"
+        android:paddingLeft="8dp"
         android:textSize="16dp"
         android:layout_below="@+id/confirmaNome"
         android:layout_alignParentLeft="true"
@@ -109,6 +112,7 @@
         android:id="@+id/confirmaCpf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="8dp"
         android:textSize="16dp"
         android:textColor="@color/colorAccent"
         android:layout_marginTop="36dp"
@@ -120,6 +124,7 @@
         android:id="@+id/confirmaCelular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="8dp"
         android:textSize="16dp"
         android:textColor="@color/colorAccent"
         android:layout_marginTop="39dp"
@@ -132,6 +137,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:paddingLeft="8dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/confirmaCelular"
         android:layout_marginTop="41dp"
