--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,10 @@
         android:layout_marginTop="140dp"
         android:ems="10"
         android:hint="Endereço"
+        android:inputType="textPersonName"
+        android:selectAllOnFocus="true"
         android:textColor="@color/colorAccent"
-        android:textColorHint="@color/colorPrimary"
-        android:inputType="textPersonName" />
+        android:textColorHint="@color/colorPrimary" />
 
     <EditText
         android:id="@+id/nomeClienteId"
@@ -33,6 +34,7 @@
         android:ems="10"
         android:hint="Nome"
         android:inputType="textPersonName"
+        android:selectAllOnFocus="true"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorPrimary"/>
 
@@ -43,6 +45,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/nomeClienteId"
+        android:selectAllOnFocus="true"
         android:layout_marginTop="15dp"
         android:ems="10"
         android:hint="Rg"
@@ -54,6 +57,7 @@
         android:id="@+id/cpfClienteId"
         android:layout_width="@dimen/largura_Campo"
         android:layout_height="wrap_content"
+        android:selectAllOnFocus="true"
         android:layout_alignBaseline="@+id/rgClienteId"
         android:layout_alignBottom="@+id/rgClienteId"
         android:layout_toEndOf="@+id/rgClienteId"
@@ -71,6 +75,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/rgClienteId"
+        android:selectAllOnFocus="true"
         android:layout_marginTop="17dp"
         android:ems="10"
         android:hint="Celular"
