--- a/app/src/main/res/layout/activity_imagem.xml
+++ b/app/src/main/res/layout/activity_imagem.xml
@@ -1,39 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     android:background="@drawable/fundo"
     tools:context="victor.machado.com.br.registro.ImagemActivity">
 
     <ImageView
         android:id="@+id/imgDocumento"
-        android:layout_width="0dp"
-        android:layout_height="329dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginTop="8dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="300dp"
+        android:layout_height="300dp" />
 
     <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:id="@+id/botaoAssinar"
-        android:text="Assinar Documento"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="8dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="35dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" />
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Assinar Formulário"
+        android:textColor="@android:color/white" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
